[gd_scene load_steps=58 format=2]

[ext_resource path="res://Assets/Sprites/Playeable/Fawu.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/LightTextures/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Playeable/Yiblin.png" type="Texture" id=4]
[ext_resource path="res://Player/CharacterSelector.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Back",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 6.842, 2.86994 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 8.342, 2.8558 )

[sub_resource type="AtlasTexture" id=46]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 16
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "Back",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0.5, 0 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite1Player" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
animation = "Right"

[node name="FeetAreaCollision" type="CollisionShape2D" parent="."]
position = Vector2( 3, 29 )
shape = SubResource( 26 )

[node name="FeetArea" type="Area2D" parent="."]

[node name="Feet" type="CollisionShape2D" parent="FeetArea"]
position = Vector2( 3.25, 29 )
shape = SubResource( 27 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 1.59913, 0.0938148 )
scale = Vector2( 0.17874, 0.189013 )
texture = ExtResource( 3 )
energy = 0.7

[node name="Sprite2Player" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 52 )
animation = "Front"

[node name="CharacterSelector" parent="." instance=ExtResource( 5 )]
